--- a/views/presentation.html
+++ b/views/presentation.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>Slide Rafael</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -41,10 +41,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Title</h1>
-					<h3>Sub Title</h3>
+					<h1>Apresentação do Git</h1>
+					<h3>testando um novo sistema</h3>
 					<p>
-						<small>footnote <a href="#">some link</a> </small>
+						<small> hi <a href="#">some link</a> </small>
 					</p>
 				</section>
 
@@ -55,7 +55,7 @@
                     </p>
 				</section>
 
-				<!-- <section>
+				<section>
                     <section data-background="http://i.giphy.com/90F8aUepslB84.gif">
                         <h2>... and GIFs!</h2>
                     </section>
